# leonardo_field_description

./: CMakeLists.txt  README.md  conf.rviz  package.xml
launch/: launch_leo_octomap.launch  launch_leonardo_marker.py  launch_leonardo_race_field.py  leonardo_2023_gazebo.launch  leonardo_gazebo_marker.launch  static_world_map.launch
octo_script/: assieme_gara_2023_res.stl  leonardo_1024.binvox  leonardo_512.bt  leonardo_512_res.binvox  leonardo_512_res.bt
scripts/: aruco_generator.py
worlds/: leonardo_marker.sdf  leonardo_marker.world  leonardo_race_field.sdf  leonardo_race_field.world  map_fusion.world
